k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
  labels:
    app.kubernetes.io/part-of: gitops-platform
