k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gitops-app
  namespace: gitops

  labels:
    app: gitops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gitops-app

  template:

    metadata:
      labels:
        app: gitops-app

    spec:
      containers:

        - name: app

          image: IMAGE_PLACEHOLDER

          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "300m"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10
