k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: gitops-app
spec:
  type: NodePort
  selector:
    app: gitops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080    # Access via minikube IP:30080
