k8s/ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitops-app-route
  namespace: gitops

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/`)
      kind: Rule

      services:
        - name: gitops-app-service
          port: 80
